# lean-fraud-detection

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/: README.md
airflow/dags/: fraud_pipeline.py  lean_fraud_pipeline.py
configs/: base.yaml
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  EDA_FINDINGS.md
infra/: init_localstack.sh
infra/terraform/: main.tf
notebooks/: eda_sparkov.ipynb
scripts/: agent_demo.py  demo.sh  run_experiments.sh  train_with_mlflow.sh
src/lean_fraud/: __init__.py  benchmark.py  config.py  evaluate.py  experiments.py  losses.py  metrics.py  tracking.py  train.py
src/lean_fraud/agent/: graph.py  llm.py  schema.py  store.py  tools.py
src/lean_fraud/data/: __init__.py  build_sequences.py  dataset.py  download.py  windows.py
src/lean_fraud/data/transform/: __init__.py  encode.py  features.py  pca.py  split.py
src/lean_fraud/models/: __init__.py  baselines.py  tcn.py  transformer.py
src/lean_fraud/serve/: api.py  scoring.py
src/lean_fraud/streaming/: __init__.py  consumer.py  producer.py
tests/: conftest.py  test_agent_graph.py  test_agent_tools.py  test_config.py  test_dataset.py  test_features.py  test_pca.py  test_scoring.py  test_serving_e2e.py  test_smoke.py  test_split.py  test_store.py  test_windows.py
