[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lean-fraud-detection"
version = "0.1.0"
description = "Real-time transaction fraud detection: a lean TCN that beats a heavy Transformer on efficiency."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alejandro Torres", email = "alejandrotormun@gmail.com" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "torch>=2.2",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "mlflow>=2.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "boto3>=1.34",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Optional feature extras (installed with `uv sync --extra demo`).
demo = [
    "streamlit>=1.34",
]

# Dev/infra tooling lives in dependency groups (PEP 735). `uv sync` installs the
# default `dev` group automatically; add others with `uv sync --group infra`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
]
# `tflocal` / `awslocal` wrappers used by infra/init_localstack.sh to provision LocalStack.
# (The Terraform binary itself is not a Python package — install it separately.)
infra = [
    "terraform-local>=0.18",
    "awscli-local>=0.22",
]
# Dataset download via the Kaggle API (data/download.py). Not needed to train or serve.
data = [
    "kaggle>=1.6",
]
# Exploratory data analysis notebook (notebooks/eda_sparkov.ipynb). Dev-only.
eda = [
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.uv]
# Keep the default environment lean; opt into the demo extra explicitly when needed.
default-groups = ["dev"]

# Use the CUDA 12.6 PyTorch wheels on Windows (local dev with an NVIDIA GPU). Linux/macOS and CI
# fall back to the default CPU build from PyPI — the marker keeps CI from pulling the ~2 GB CUDA wheel.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'win32'" }]

[tool.hatch.build.targets.wheel]
packages = ["src/lean_fraud"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
